companies section implemetation and fix z-index hero bg

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --color-white: #ffffff;
+  --color-white-alternate: #FDFFFA;
 
   --color-grey-90: #e6e6e6;
   --color-grey-60: #98989a;
@@ -16,9 +17,10 @@
   --button-height: 60px;
   --button-padding-inline: 28px;
 
-  --border-radius-6: 6px;
-  --border-radius-8: 8px;
+  --border-radius-12: 100px;
   --border-radius-12: 12px;
+  --border-radius-8: 8px;
+  --border-radius-6: 6px;
 
   --container-width: 1596px;
   --container-padding-x: 16px;
