--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -6,6 +6,7 @@
   background: url('../../assets/images/backgrounds/dotted-bg.webp') center /
     cover no-repeat;
   padding-bottom: 274px;
+  z-index: -1;
 
   &::before {
     content: '';
@@ -14,7 +15,7 @@
     height: 448px;
     bottom: 0;
     left: 0;
-    z-index: -1;
+    z-index: -2;
     background: url('../../assets/images/abstract-mountain.webp') center / cover
       no-repeat;
   }
