--- a/styles/main.css
+++ b/styles/main.css
@@ -206,6 +206,7 @@ svg * {
 }
 :root {
   --color-white: #ffffff;
+  --color-white-alternate: #FDFFFA;
   --color-grey-90: #e6e6e6;
   --color-grey-60: #98989a;
   --color-grey-20: #333333;
@@ -217,9 +218,10 @@ svg * {
   --font-family-base: "Barlow", sans-serif;
   --button-height: 60px;
   --button-padding-inline: 28px;
-  --border-radius-6: 6px;
-  --border-radius-8: 8px;
+  --border-radius-12: 100px;
   --border-radius-12: 12px;
+  --border-radius-8: 8px;
+  --border-radius-6: 6px;
   --container-width: 1596px;
   --container-padding-x: 16px;
   --transition-duration: 0.2s;
@@ -543,6 +545,7 @@ h5,
   padding-top: 112px;
   background: url("../../assets/images/backgrounds/dotted-bg.webp") center/cover no-repeat;
   padding-bottom: 274px;
+  z-index: -1;
 }
 .hero::before {
   content: "";
@@ -551,7 +554,7 @@ h5,
   height: 448px;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: -2;
   background: url("../../assets/images/abstract-mountain.webp") center/cover no-repeat;
 }
 @media (width <= 1440.98px) {
@@ -635,6 +638,17 @@ h5,
 }
 .hero__works-link {
   border: 1px solid var(--color-grey-20);
+}
+
+.companies__count {
+  margin-top: -80%;
+  display: inline-block;
+  border: 1px solid var(--color-grey-15);
+  padding: 20px 34px;
+  border-radius: 100px;
+  font-weight: 500;
+  color: var(--color-white-alternate);
+  background-color: var(--color-grey-10);
 }
 
 /*# sourceMappingURL=main.css.map */
